2005-08-01  Jacob Smullyan  <smulloni@smullyan.org>

	* tests/fixture.py (base_fixture): added new table ("F") for
	OneToMany and ForeignKey tests with multi-column keys.

	* tests/test_base.py (test_one_to_many1, test_one_to_many2): tests
	for OneToMany. (test_foreignkey2): test for ForeignKey with
	multi-column FK.

	* src/pydo/base.py (OneToMany): a utility for creating accessor
	methods for one-to-many associations.

2005-07-28  Jacob Smullyan  <smulloni@smullyan.org>

	* tests/test_base.py (test_foreignkey1) test of ForeignKey
	descriptor. 

	* src/pydo/base.py (ForeignKey): a descriptor that makes it easy
	to create foreign key properties.

2005-07-25  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/__init__.py (__version__): upping version for beta1.

	* tests/test_base.py (test_unique5): renamed test, which shared
	name with another.

2005-07-22  Jacob Smullyan  <smulloni@smullyan.org>

	* doc/manual.rst: adding note about table name guessing and
	inheritance. 

	* tests/test_base.py (test_inheritance2): checking that base
	classes are being processed by the metaclass in the right order.

	* src/pydo/base.py (_metapydo.__init__): new table name
	inheritance semantics (proposed by Hamish Lawson).

	* tests/test_base.py (test_guess_tablename1): test implementation
	of new table name inheritance semantics.

2005-07-21  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/base.py (PyDO._uniqueWhere): tighter error handling for
	unique constraints -- raise ValueError if a NULL is passed to
	getUnique() or similar methods.  This ensures that meaningless SQL
	won't be generated (WHERE x=NULL) and gives a clearer error
	message. 

2005-07-17  Jacob Smullyan  <smulloni@smullyan.org>

	* src/pydo/drivers/psycopgconn.py: added support for new module
	name for psycopg2 ("psycopg2" as of 2.0b4).

2005-07-16  Jacob Smullyan  <smulloni@smullyan.org>

	* doc/manual.rst: document _ignore_update_rowcount.

	* src/pydo/base.py (PyDO): adding _ignore_update_rowcount