@@ -1,44 +1,25 @@
 """
-a small example PIM application, using sqlite
+a small example PIM application, using sqlite.
+
+The schema is actually rather ridiculous (why are contact -> notes
+many to many?)  but you get the idea.
+
 """
 import os
 from mx.DateTime import now
 from pydo import *
 
-class Contact(PyDO):
-    connectionAlias='pim'
+class Note(PyDO):
+    connectionAlias="pim"
+    # if created had a default value (which
+    # it would if the version of sqlite this was
+    # tested on supported anything like CURRENT_TIMESTAMP)
+    # I'd set:
+    # refetch=True
     fields=(Sequence('id'),
-            'first_name',
-            'last_name',
-            'address_id1',
-            'address_id2',
-            'email1',
-            'email2',
-            'work_phone',
-            'home_phone',
-            'mobile_phone')
-
-    def getAddress1(self):
-        if self.address_id1 is not None:
-            return Address.getUnique(id=self.address_id1)
-
-    def getAddress2(self):
-        if self.address_id2 is not None:
-            return Address.getUnique(id=self.address_id2)
-
-    def addNote(self, title, body):
-        n=Note.new(title=title, body=body, created=now())
-        junction=ContactNote.new(contact_id=self.id,
-                                 note_id=n.id)
-        
-
-    def getNotes(self):
-        return self.joinTable('id',
-                              'contact_note',
-                              'contact_id',
-                              'note_id',
-                              Note,
-                              'id')
+            'title',
+            'body',
+            'created')
 
 class Address(PyDO):
     connectionAlias='pim'
@@ -54,17 +35,35 @@ class Address(PyDO):
         return Contact.getSome(OR(EQ(FIELD('address_id1'), self.id),
                                   EQ(FIELD('address_id2'), self.id)))
 
-class Note(PyDO):
-    connectionAlias="pim"
-    # if created had a default value (which
-    # it would if the version of sqlite this was
-    # tested on supported anything like CURRENT_TIMESTAMP)
-    # I'd set:
-    # refetch=True
+
+class Contact(PyDO):
+    connectionAlias='pim'
     fields=(Sequence('id'),
-            'title',
-            'body',
-            'created')
+            'first_name',
+            'last_name',
+            'address_id1',
+            'address_id2',
+            'email1',
+            'email2',
+            'work_phone',
+            'home_phone',
+            'mobile_phone')
+
+    Address1=ForeignKey('address_id1', 'id', Address)
+    Address2=ForeignKey('address_id2', 'id', Address)
+
+    def addNote(self, title, body):
+        n=Note.new(title=title, body=body, created=now())
+        junction=ContactNote.new(contact_id=self.id,
+                                 note_id=n.id)
+
+    getNotes=ManyToMany('id',
+                        'contact_note',
+                        'contact_id',
+                        'note_id',
+                        Note,
+                        'id')
+
 
 class ContactNote(PyDO):
     connectionAlias='pim'
